run test script in TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ install:
   - wget https://dl.dropboxusercontent.com/u/28267180/x10-2.5.4_linux_x86_64.tgz
   - mkdir -p x10
   - tar xvzf x10-2.5.4_linux_x86_64.tgz -C x10
+before_script:
+  - export PATH=$PWD/x10/bin:$PATH
 script:
-  - x10/bin/x10c++ -version
+  - test/build_run_test.sh
 
