--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 install:
-- wget http://downloads.sourceforge.net/project/x10/x10/2.5.4/x10-2.5.4_linux_x86_64.tgz
-- mkdir -p x10
-- tar xvzf x10-2.5.4_linux_x86_64.tgz -C x10
+- ./buildx10.sh
 before_script:
 - export PATH=$PWD/x10/bin:$PATH
 script:
